--- a/team-builder/src/index.css
+++ b/team-builder/src/index.css
@@ -7,7 +7,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+p {
+  margin: 0;
+  padding: 0;
 }
